去除一些代码告警